# MegaClient

./: .env.example  .gitignore  BUILD_REPORT.md  BUILD_WINDOWS.md  CHANGELOG.md  DISCORD_UPDATE_LOG_1.8.1.md  DISCORD_UPDATE_LOG_1.9.0.md  DISCORD_UPDATE_LOG_1.9.1.md  DISCORD_UPDATE_LOG_1.9.3.md  DISCORD_UPDATE_LOG_1.9.4.md  DISCORD_UPDATE_LOG_1.9.5.md  LICENSE  README-FIX.md  README.md  RELEASE_CHECKLIST.md  RELEASING.md  SECURITY.md  THIRD_PARTY_NOTICES.md  UPDATER_SETUP.md  UPDATER_SETUP_SIMPLE.md  UPDATING.md  UPGRADE_1.7.1.md  UPGRADE_1.8.1.md  UPGRADE_1.9.0.md  UPGRADE_1.9.1.md  UPGRADE_1.9.3.md  UPGRADE_1.9.4.md  UPGRADE_1.9.5.md  VALIDATION.md  build-windows-installer.cmd  configure-discord-activity.cmd  electron-builder.config.cjs  electron.vite.config.ts  index.html  package-lock.json  package.json  publish-megaclient-update-fixed.cmd  publish-megaclient-update.cmd  publish-update.cmd  run-development.cmd  (+6 more)
.github/workflows/: release-windows.yml  release.yml
client-mod/: LICENSE  build.gradle  gradle.properties  settings.gradle
github/workflows/: release-windows.yml
public/: splash.html
resources/client/: megaclient.bundle
resources/discord/: application-id.txt
scripts/: build-signed-release.mjs  command-utils.mjs  create-updater-config.mjs  download-jre.ps1  ensure-rust.mjs  protect-client.mjs  publish-release.mjs  release-setup.mjs  release.ps1  set-version.mjs  verify-client-resources.mjs  verify-discord-activity.mjs  verify-release.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/jre/: README.txt
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  state.rs  store.rs
src-tauri/src/commands/: app.rs  auth.rs  content.rs  instances.rs  launch.rs  mod.rs  servers.rs  skins.rs  system.rs
src-tauri/src/services/: auth.rs  java.rs  mod.rs  modrinth.rs  runtime.rs
src/components/: CapePreview.tsx  EmptyState.tsx  LaunchConsoleModal.tsx  MinecraftSkinViewer.tsx  ProgressOverlay.tsx  SectionHeader.tsx  Sidebar.tsx  TitleBar.tsx  UpdateNotification.tsx
src/hooks/: useLauncher.ts  useLauncherUpdater.ts
src/lib/: api.ts  types.ts  updater.ts  utils.ts
src/main/: index.ts  types.ts
src/main/services/: account.ts  clientPayload.ts  discordActivity.ts  instances.ts  launcher.ts  modSecurity.ts  modrinth.ts  net.ts  paths.ts  profile.ts  security.ts  servers.ts  store.ts  updater.ts  versions.ts  worlds.ts
src/pages/: Discover.tsx  Home.tsx  Library.tsx  Login.tsx  Servers.tsx  Settings.tsx  Skins.tsx
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  Skin3DPreview.tsx  global.d.ts  main.tsx  styles.css
src/ui/: App.tsx  styles.css
(+6 files in other folders)
